HW2/part4/t18.output
running e2c
compiling the C generated code
t18.c: In function ‘main’:
t18.c:4:1: warning: useless type name in empty declaration
 int ;
 ^
t18.c:5:2: error: expected expression before ‘=’ token
  = 999;
  ^
t18.c:6:15: error: expected expression before ‘)’ token
 printf("",  - );
               ^
t18.c:7:11: error: expected expression before ‘)’ token
 if( 0 >= ()){
           ^
t18.c:8:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t18.c:9:1: error: expected ‘}’ before ‘else’
 else {int ;
 ^
t18.c:9:1: warning: useless type name in empty declaration
t18.c:10:2: error: expected expression before ‘=’ token
  = 8888;
  ^
t18.c:11:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:12:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:13:11: error: expected expression before ‘)’ token
 if( 0 >= ()){
           ^
t18.c:14:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t18.c:15:1: error: expected ‘}’ before ‘else’
 else {printf("", 2222);
 ^
t18.c:15:14: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 else {printf("", 2222);
              ^
t18.c:16:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:18:1: warning: useless type name in empty declaration
 int ;
 ^
t18.c:19:2: error: expected expression before ‘=’ token
  = 3;
  ^
t18.c:20:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:21:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:22:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:23:11: error: expected expression before ‘)’ token
 if( 0 >= ()){
           ^
t18.c:24:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t18.c:25:1: error: expected ‘}’ before ‘else’
 else {int ;
 ^
t18.c:25:1: warning: useless type name in empty declaration
t18.c:26:2: error: expected expression before ‘=’ token
  = 4;
  ^
t18.c:27:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 5);
        ^
t18.c:28:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:30:1: warning: useless type name in empty declaration
 int ;
 ^
t18.c:31:2: error: expected expression before ‘=’ token
  = 6;
  ^
t18.c:32:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:33:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:34:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t18.c:35:1: error: expected declaration or statement at end of input
 }
 ^
t18.c:35:1: error: expected declaration or statement at end of input
t18.c:35:1: error: expected declaration or statement at end of input
t18.c:35:1: error: expected declaration or statement at end of input
t18.c:35:1: error: expected declaration or statement at end of input
